Compiler/tests/good/mistery.nx
function mistery(n : int) : int
{
    type a : array 10 of [0..maxint];
    val v : a filled by 0;
    
    foreach i in [0 .. 9]
    {
        v[i] := i;
    }

    if(n < 10)
    {
        return v[n];
    }
        
    return (n / 10) + v[n % 10];
}

printn(mistery(0));
printn(mistery(42));
printn(mistery(1024));
