Compiler/tests/bad/val3.nx
type t = [0 .. 1];
type a : array t of t;

val b : a filled by 2;

val b : int = 3;
